Get Stratis ID endpoint
